--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1>What was your day like as an admin?</h1>
     <textarea id="textInput" maxlength="300" placeholder="Enter up to 300 characters"></textarea>
     <p>Characters remaining: <span id="charCount">300</span></p>
-    <button onclick="submitText()">Finish</button>
+    <button onclick="submitText()">Submit</button>
     <div id="message"></div>
     <div id="error"></div>
 
@@ -37,28 +37,30 @@
                 error.textContent = 'Please enter some text.';
                 return;
             }
-
             const date = new Date().toLocaleDateString();
             const data = { text, date };
-
-            fetch('https://script.google.com/macros/s/AKfycbzqe6uxZfTwhbpaE6XRddccXiEgmVwmg_Y2NnpMZgT_qO948isXWANIIctiVNm3SIUX/exec', {
+            fetch('https://script.google.com/macros/s/AKfycbz5FfjyAVy7nD2m5EsiPCnhjFC7pMrrYzsmZPFZrRzasQVxazQh1vPWhZWdK0rWsEyn/exec', {
                 method: 'POST',
                 body: JSON.stringify(data),
-                headers: { 'Content-Type': 'application/json' }
+                headers: { 'Content-Type': 'application/json' },
+                mode: 'cors'
             })
-            .then(response => response.json())
+            .then(response => {
+                if (!response.ok) throw new Error('Network response was not ok: ' + response.status);
+                return response.json();
+            })
             .then(result => {
                 if (result.status === 'success') {
                     message.textContent = 'Text submitted successfully!';
                     error.textContent = '';
                     textarea.value = '';
-                    charCount.textContent = '300';
+                    charCount.textContent = '500';
                 } else {
-                    error.textContent = 'Error submitting text.';
+                    error.textContent = 'Error submitting text: ' + (result.message || 'Unknown error');
                 }
             })
             .catch(err => {
-                error.textContent = 'Error connecting to server.';
+                error.textContent = 'Error connecting to server: ' + err.message;
             });
         }
     </script>
